# aithre

./: .gitignore  20250129_134703_points.txt  guiv4_ui.py  pyproject.toml  requirements.txt
emerita/: guiv1.py  guiv2.py  guiv3_ui.py  guiv4.py  guiv4_1.py  guiv4_1_5_ui.py  guiv4_2.py  guiv4_2_2.py  guiv4_2_3.py  guiv4_ui.py
testing/: ls_oav.py  moveonclick_test.py  moveonclick_tk.py  opencv_code.py  pymba.py
