[project]
name = "aithre"
version = "0.1.0"
description = "GUI for the I23 laser shaping system at Diamond Light Source"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyqt5",
    "opencv-python-headless",
    "numpy",
    "requests",
    "zmq",
    "asyncio",
    "httpx",
    "qasync",
    "ruff",
    "bluesky",
    "ophyd",
    "ophyd-async",
    "softioc",
    "rust>=1.3.1",
]
[tool.setuptools]
py-modules = []
